--- a/task.html
+++ b/task.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Task</title>
+    <title>SPINER</title>
 </head>
 <body>
     <div id="processing">
@@ -17,8 +17,8 @@
                 <img id="second-wheel" src="assets/cogwheel.svg" alt="">
             </div>
         </div>
-        
-       <h4>proccesing...</h4>
+
     </div>
 </body>
 </html>
+
